keycloak-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: keycloak-db
  name: keycloak-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: keycloak-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/keycloak-net: "true"
        io.kompose.service: keycloak-db
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: keycloak
            - name: POSTGRES_PASSWORD
              value: password
            - name: POSTGRES_USER
              value: keycloak
          image: postgres:14-alpine
          name: keycloak-db
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data/db_files
              name: keycloak-datastore
      restartPolicy: Always
      volumes:
        - name: keycloak-datastore
          persistentVolumeClaim:
            claimName: keycloak-datastore
status: {}
