keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: keycloak
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/keycloak-net: "true"
        io.kompose.service: keycloak
    spec:
      containers:
        - args:
            - start-dev
          image: quay.io/keycloak/keycloak:17.0.0
          name: keycloak
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
