kong-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: kong-db
  name: kong-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kong-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/kong-net: "true"
        io.kompose.service: kong-db
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: api-gw
            - name: POSTGRES_PASSWORD
              value: kong
            - name: POSTGRES_USER
              value: kong
          image: postgres:11-alpine
          name: kong-db
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data/db_files
              name: kong-datastore
      restartPolicy: Always
      volumes:
        - name: kong-datastore
          persistentVolumeClaim:
            claimName: kong-datastore
status: {}
