kong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: kong
  name: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kong
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.27.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/kong-net: "true"
        io.kompose.service: kong
    spec:
      containers:
        - env:
            - name: KONG_ADMIN_ACCESS_LOG
              value: /dev/stdout
            - name: KONG_ADMIN_ERROR_LOG
              value: /dev/stderr
            - name: KONG_ADMIN_LISTEN
              value: 0.0.0.0:8001, 0.0.0.0:8444 ssl
            - name: KONG_DATABASE
              value: postgres
            - name: KONG_LOG_LEVEL
              value: debug
            - name: KONG_PG_DATABASE
              value: api-gw
            - name: KONG_PG_HOST
              value: 10.88.0.11
            - name: KONG_PG_PASSWORD
              value: kong
            - name: KONG_PG_PORT
              value: "5432"
            - name: KONG_PG_USER
              value: kong
            - name: KONG_PROXY_ACCESS_LOG
              value: /dev/stdout
            - name: KONG_PROXY_ERROR_LOG
              value: /dev/stderr
            - name: KONG_PROXY_LISTEN
              value: 0.0.0.0:8000, 0.0.0.0:8443 ssl
          image: kong:3.1.1-alpine
          name: kong
          livenessProbe:
            exec:
              command:
                - kong
                - migrations
                - bootstrap         
          ports:
            - containerPort: 8000
            - containerPort: 8001
            - containerPort: 8443
            - containerPort: 8444
          resources: {}
      restartPolicy: Always
status: {}
