kong-migrations-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.network/kong-net: "true"
    io.kompose.service: kong-migrations
  name: kong-migrations
spec:
  containers:
    - args:
        - kong
        - migrations
        - bootstrap
      image: kong:2.3.2-alpine
      name: kong-migrations
      resources: {}
  restartPolicy: OnFailure
status: {}
