kong-migrations-up-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.network/kong-net: "true"
    io.kompose.service: kong-migrations-up
  name: kong-migrations-up
spec:
  containers:
    - args:
        - kong
        - migrations
        - up
        - '&&'
        - kong
        - migrations
        - finish
      image: kong:3.1.1-alpine
      name: kong-migrations-up
      resources: {}
  restartPolicy: OnFailure
status: {}
