kong-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.network/kong-net: "true"
    io.kompose.service: kong
  name: kong
spec:
  containers:
    - env:
        - name: KONG_ADMIN_ACCESS_LOG
          value: /dev/stdout
        - name: KONG_ADMIN_ERROR_LOG
          value: /dev/stderr
        - name: KONG_ADMIN_LISTEN
          value: 0.0.0.0:8001, 0.0.0.0:8444 ssl
        - name: KONG_CASSANDRA_CONTACT_POINTS
          value: kong-db
        - name: KONG_DATABASE
          value: postgres
        - name: KONG_LOG_LEVEL
          value: debug          
        - name: KONG_PG_DATABASE
          value: api-gw
        - name: KONG_PG_HOST
          value: kong-db
        - name: KONG_PG_PORT
          value: "5432"          
        - name: KONG_PG_PASSWORD
          value: kong
        - name: KONG_PG_USER
          value: kong         
        - name: KONG_PROXY_ACCESS_LOG
          value: /dev/stdout
        - name: KONG_PROXY_ERROR_LOG
          value: /dev/stderr
        - name: KONG_PROXY_LISTEN
          value: 0.0.0.0:8000, 0.0.0.0:8443 ssl          
      image: kong:3.1.1-alpine
      livenessProbe:
        exec:
          command:
            - kong
            - health
      name: kong
      ports:
        - containerPort: 8000
        - containerPort: 8001
        - containerPort: 8443
        - containerPort: 8444
      resources: {}
  restartPolicy: OnFailure
status: {}
