konga-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: konga
  name: konga
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: konga
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.27.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/kong-net: "true"
        io.kompose.service: konga
    spec:
      containers:
        - env:
            - name: DB_ADAPTER
              value: postgres
            - name: DB_DATABASE
              value: api-gw
            - name: DB_HOST
              value: kong-db
            - name: DB_PASSWORD
              value: kong
            - name: DB_PORT
              value: "5432"
            - name: DB_USER
              value: kong
            - name: NODE_ENV
              value: development
          image: pantsel/konga:0.14.9
          name: konga
          ports:
            - containerPort: 1337
          resources: {}
      restartPolicy: Always
status: {}
