keycloak-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: keycloak-db
  name: keycloak-db
spec:
  ports:
    - name: "25432"
      port: 25432
      targetPort: 5432
  selector:
    io.kompose.service: keycloak-db
status:
  loadBalancer: {}
