kong-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: kong-db
  name: kong-db
spec:
  ports:
    - name: "15432"
      port: 15432
      targetPort: 5432
  selector:
    io.kompose.service: kong-db
status:
  loadBalancer: {}
