kong-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: kong
  name: kong
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
    - name: "8001"
      port: 8001
      targetPort: 8001
    - name: "8443"
      port: 8443
      targetPort: 8443
    - name: "8444"
      port: 8444
      targetPort: 8444
  selector:
    io.kompose.service: kong
status:
  loadBalancer: {}
