konga-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: konga
  name: konga
spec:
  ports:
    - name: "1337"
      port: 1337
      targetPort: 1337
  selector:
    io.kompose.service: konga
status:
  loadBalancer: {}
